--- a/stusentlogin.html
+++ b/stusentlogin.html
@@ -54,7 +54,7 @@ button {
 		<div id="b1">
 	<div id="border">	
 		<br><br><br>		
-<img src="/home/harish/Desktop/project/image/user.png" height="100px" width="100px" style="margin-left: -50px;"></div>
+<img src="https://raw.githubusercontent.com/A-infinity4/Mini_Project/master/image/avatar2.png" height="100px" width="100px" style="margin-left: -50px;"></div>
 <h2 style="margin-top: 35px;">Student Login &nbsp</h2>
 <h4>Sign in to continue</h4>
 <div id="h1"><br><br>
