--- a/index.html
+++ b/index.html
@@ -539,5 +539,10 @@ function w3_close() {
   overlayBg.style.display = "none";
 }
 </script>
+    <form action="?" method="POST">
+      <div class="g-recaptcha" data-sitekey="6LeOXH8eAAAAALx9zm8lU3KC6SZbZK8Ftyj64fK1"></div>
+      <br/>
+      <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
