--- a/stusentlogin.html
+++ b/stusentlogin.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 	<title>KAMLA NEHRU INSTITUTE OF TECHNOLOGY (KNIT) SULTANPUR</title>
-	<link rel="shortcut icon" href="/home/harish/Desktop/project/image/favicon.ico" />
-	<link rel="shortcut icon" href="/home/harish/Desktop/project/image/favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="/home/harish/Desktop/project/css/bootstrap.css">
+	<link rel="shortcut icon" href="image/favicon.ico" />
+	<link rel="shortcut icon" href="image/favicon.ico" />
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<style type="text/css">
 		#border{
 			height: 150px;
-			width: 0px;
 			border: 1px;
 			background-color:white ;
 			margin-top: -45px;
@@ -20,7 +19,7 @@
 			background-color: #f1f1f1;
 		}
 		#b1{
-			height: 500px
+			height: 500px;
 			width:200px;
 			padding: 10px 20px;
 			border: 2px solid black;
@@ -41,7 +40,6 @@ button {
   color: white;
   padding: 0px 5px;
   margin-top: 10px;
-  margin-bottom: 0px: 
   border: none;
   width: 100%;
   height: 15%;
@@ -54,7 +52,7 @@ button {
 		<div id="b1">
 	<div id="border">	
 		<br><br><br>		
-<img src="https://raw.githubusercontent.com/A-infinity4/Mini_Project/master/image/avatar2.png" height="100px" width="100px" style="margin-left: -50px;"></div>
+<img src="image/user.png" height="100px" width="100px" style="margin-left: -50px;"></div>
 <h2 style="margin-top: 35px;">Student Login &nbsp</h2>
 <h4>Sign in to continue</h4>
 <div id="h1"><br><br>
