--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ background-color: #cccccc
 <gcse:search></gcse:search>
 <div style="margin-right: 15px; margin-bottom: 40px;">
 <l style="float: right;"><a href="stusentlogin.html" style="text-decoration: none; color: solid black;"><button type="button">Login</button>
-</a><button type="button">Register</button></l></div>
+</a><a href="StudentRegistration.html" style="text-decoration: none; color: solid black;"><button type="button">Register</button></a></l></div>
 </div>
 <a href="index.html"><img src="image/track.png" style="height: 120px;width: 200px; float: left;">
   </a><div><center><h2><span style="font-size:23px; color:black; text-shadow:5px 5px 10px black;">
